[gd_scene load_steps=35 format=3 uid="uid://cji1bf8jn3rqs"]

[ext_resource type="Script" path="res://mobs/BoxBot/box_bot.gd" id="1_d73ly"]
[ext_resource type="Texture2D" uid="uid://c2py2a5wiqroy" path="res://assets/BoxBot/BoxBot_Hit.png" id="1_sgdyr"]
[ext_resource type="Texture2D" uid="uid://ndmc3rroxt18" path="res://assets/BoxBot/BoxBot_Idle.png" id="2_sisam"]
[ext_resource type="Texture2D" uid="uid://u2yn3upm3toc" path="res://assets/BoxBot/BoxBot_Walk.png" id="3_oo3dg"]
[ext_resource type="PackedScene" uid="uid://bb2fq71al57wx" path="res://objects/hit_box.tscn" id="4_wypkc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5186b"]
atlas = ExtResource("1_sgdyr")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ak6ji"]
atlas = ExtResource("1_sgdyr")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar356"]
atlas = ExtResource("1_sgdyr")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_amxny"]
atlas = ExtResource("1_sgdyr")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tj2yy"]
atlas = ExtResource("1_sgdyr")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ma5q0"]
atlas = ExtResource("1_sgdyr")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rk6rh"]
atlas = ExtResource("1_sgdyr")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i21it"]
atlas = ExtResource("1_sgdyr")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5k0p5"]
atlas = ExtResource("1_sgdyr")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_skcfk"]
atlas = ExtResource("2_sisam")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwxqv"]
atlas = ExtResource("2_sisam")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0hhq"]
atlas = ExtResource("2_sisam")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dlbt"]
atlas = ExtResource("2_sisam")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_500hg"]
atlas = ExtResource("2_sisam")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_op2xm"]
atlas = ExtResource("2_sisam")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2cjj"]
atlas = ExtResource("2_sisam")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pote"]
atlas = ExtResource("2_sisam")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_traw8"]
atlas = ExtResource("3_oo3dg")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ho8b4"]
atlas = ExtResource("3_oo3dg")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0twxo"]
atlas = ExtResource("3_oo3dg")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5all"]
atlas = ExtResource("3_oo3dg")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0pn8"]
atlas = ExtResource("3_oo3dg")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvtvb"]
atlas = ExtResource("3_oo3dg")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kiem7"]
atlas = ExtResource("3_oo3dg")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_njy76"]
atlas = ExtResource("3_oo3dg")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6261h"]
atlas = ExtResource("3_oo3dg")
region = Rect2(128, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ytlp3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5186b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ak6ji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar356")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_amxny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tj2yy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ma5q0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rk6rh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i21it")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5k0p5")
}],
"loop": false,
"name": &"hit",
"speed": 22.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_skcfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwxqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0hhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dlbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_500hg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op2xm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2cjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pote")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_traw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ho8b4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0twxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5all")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0pn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvtvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kiem7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njy76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6261h")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vme8u"]
size = Vector2(7, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_76uit"]
size = Vector2(11, 10)

[node name="BoxBot" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_d73ly")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ytlp3")
animation = &"hit"
autoplay = "idle"

[node name="HitBox" parent="." instance=ExtResource("4_wypkc")]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
light_mask = 0
visibility_layer = 2
position = Vector2(0.355, 1.945)
shape = SubResource("RectangleShape2D_vme8u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 4
visibility_layer = 5
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_76uit")

[node name="RightLedge" type="RayCast2D" parent="."]
light_mask = 0
position = Vector2(6, 7)
target_position = Vector2(0, 4)

[node name="LeftLedge" type="RayCast2D" parent="."]
light_mask = 0
position = Vector2(-5, 7)
target_position = Vector2(0, 4)
